# data-mirage

./: .env  .env.example  .replit  CLAUDE.md  FASTAPI_README.md  README.md  ROADMAP_FONCTIONNALITES.md  docker-compose.yml  example-data.csv  package-lock.json  package.json  pyproject.toml  replit.md  test_upload.csv  tsconfig.test.json
app/: .env  alembic.ini  main.py  migrate.py  run.py
app/api/: __init__.py  auth.py  datasets.py  ml.py  users.py
app/core/: config.py  database.py  deps.py  security.py  security_middleware.py
app/migrations/: env.py
app/models/: __init__.py  dataset.py  session.py  user.py
app/schemas/: __init__.py  dataset.py  ml.py  user.py
app/services/: __init__.py  auth.py  ml_processor.py  rag_service.py  websocket.py
app/services/ml/: __init__.py  anomalies.py  base.py  clustering.py  dimensionality.py  optimization.py  preprocessing.py
app/tests/: __init__.py  conftest.py  test_main.py  test_security_fixes.py
attached_assets/: Pasted-The-above-error-occurred-in-the-ThreeJSScene-component-at-ThreeJSScene-https-f896d6b6-6-1754057214602_1754057214602.txt  Pasted-Titre-Data-Mirage-Visualisation-interactive-3D-intelligente-de-datasets-Description-Cr-er-une-1754012573154_1754012573154.txt
client/src/: App.tsx  index.css
client/src/components/Canvas3D/: README.md  exports.ts  index.tsx  types.ts
client/src/components/Canvas3D/hooks/: useCamera.ts  usePerformance.ts  useRenderer.ts  useSelection.ts
client/src/components/Canvas3D/renderers/: BaseRenderer.ts  Canvas2DRenderer.ts
client/src/components/dataset/: dataset-upload.tsx
client/src/components/ml/: ml-controls.tsx
client/src/components/ui/: file-upload.tsx  glass-panel.tsx  neon-button.tsx
client/src/components/visualization/: canvas-3d-optimized.tsx  cluster-explanations.tsx  controls-panel.tsx  dataset-stats.tsx  improved-3d-scene.tsx  info-panel.tsx  legend-panel.tsx  minimap.tsx  mobile-3d-scene.tsx  particle-background.tsx  simple-3d-canvas.tsx  simple-3d-scene.tsx  simple-controls.tsx  three-js-scene.tsx  three-scene-enhanced.tsx  three-scene-new.tsx  three-scene.tsx
client/src/hooks/: use-websocket.tsx  useAuth.ts
client/src/lib/: api.ts  auth.ts  authUtils.ts  queryClient.ts
client/src/pages/: datasets.tsx  home-authenticated.tsx  home-new.tsx  home.tsx  landing.tsx  visualization-pro.tsx
client/src/stores/: visualization-store.ts  visualization-store.tsx
client/src/types/: dataset.ts
client/src/utils/: ml-utils.ts
python-backend/: __init__.py  main.py  run.py  start_server.py
python-backend/database/: connection.py  models.py
python-backend/models/: schemas.py
python-backend/services/: auth_service.py  ml_processor.py  rag_service.py
server/: index.ts  routes.ts  storage.ts
server/services/: ml-processor.ts  rag-service.ts
shared/: schema.ts  types.ts
(+5 files in other folders)
